sites/navy/clusters/dal-navy-core-1/wave-5/overlays/todo/network-policy-todo.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: todo
  namespace: todo
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: todo
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: traefik-public
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "5000" # This is the port of the pod, not the service
              protocol: TCP
  egress:
    # Allow DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    # Allow access to Authentik for OIDC
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: authentik
            app.kubernetes.io/name: authentik
            app.kubernetes.io/component: server
      toPorts:
        - ports:
            - port: "9000"
              protocol: TCP
    # Allow HTTPS to Authentik (for OIDC discovery and authentication)
    - toFQDNs:
        - matchName: "auth.navy.dalmura.cloud"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
